logo and other generic fixes
